[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]

[sub_resource type="SphereShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.572549, 0.34902, 0.215686, 1 )

[sub_resource type="BoxShape" id=4]

[sub_resource type="Animation" id=5]
resource_name = "RightAttack"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Camera/RightHand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 45, 0, 0 ), Vector3( 30, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Camera/RightHand:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 30, 0, 0 ), Vector3( 45, 0, 0 ) ]
}

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cull_mask = 1048573
near = 0.01

[node name="RightHand" type="Spatial" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0.85, -1.2, -1 )

[node name="Fist" type="MeshInstance" parent="Camera/RightHand"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.5, 0, 0, -0.5 )
layers = 2
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="RightHandHitbox" type="Area" parent="Camera"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, -2 )
gravity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Camera/RightHandHitbox"]
shape = SubResource( 4 )

[node name="ViewportContainer" type="ViewportContainer" parent="Camera"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Camera/ViewportContainer"]
size = Vector2( 1024, 600 )
transparent_bg = true

[node name="HandCamera" type="Camera" parent="Camera/ViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
cull_mask = 2
near = 0.01

[node name="FootRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="RightMeleeAnim" type="AnimationPlayer" parent="."]
anims/RightAttack = SubResource( 5 )
anims/RightReturn = SubResource( 6 )
